--- a/URLauncherSample/app/src/main/AndroidManifest.xml
+++ b/URLauncherSample/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MYdemo">
+
+<!--       注意： 替换成你的Admob Application ID-->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-2830772598550207~1093153378"/>
+
         <activity
             android:name="com.ur.apps.launcher.demo.SplashActivity"
             android:exported="true"
